--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@ layout: default
 
 <h1>Publication highlight</h1>
 
+<p>Daniel V. Olivença. A Mathematical Model of the Phosphoinositide Pathway. Sci Rep. 2018 Mar 2;8(1):3904. <a href="https://doi.org/10.1038/s41598-018-22226-8">doi:10.1038/s41598-018-22226-8</a>. Epub 2018 March 2. PubMed PMID:29500467</p>
+
 <p>Farinha CM, Canato S. From the endoplasmic reticulum to the plasma membrane: mechanisms of CFTR folding and trafficking. Cell Mol Life Sci. 2017 Jan;74(1):39-55. <a href="http://dx.doi.org/10.1007/s00018-016-2387-7">doi:10.1007/s00018-016-2387-7</a>. Epub 2016 Oct 3. Review. PubMed PMID: 27699454</p>
