--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1>Upcoming events</h1>
   
-<p>The <a href="http://disease-maps.org/events">3rd Disease Maps Community Meeting</a> (DMCM2018) is scheduled 21-22 June 2018 in Paris. CF-MAP talk at DMCM2018: “Towards a molecular map of cystic fibrosis mechanisms”.</p>
+<p>The <a href="http://disease-maps.org/events">4th Disease Maps Community Meeting</a> (DMCM2019) is scheduled 2-4 October 2019, Sevilla, Spain.</p>
 
 <h1>Pathway highlight: normal CFTR function</h1>
 
