--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ layout: default
 
 <h1>Publication highlight</h1>
 
-<p>Daniel V. Olivença. A Mathematical Model of the Phosphoinositide Pathway. Sci Rep. 2018 Mar 2;8(1):3904. <a href="https://doi.org/10.1038/s41598-018-22226-8">doi:10.1038/s41598-018-22226-8</a>. Epub 2018 March 2. PubMed PMID:29500467</p>
+<p>João D. Santos. Folding Status Is Determinant over Traffic-Competence in Defining CFTR Interactors in the Endoplasmic Reticulum. Cells. 2019 Apr 14;8(4).353. <a href="https://doi.org/10.3390/cells8040353"> doi: 10.3390/cells8040353.</a>. Epub 2019 April 14. PubMed PMID:31014000 </p>
