--- a/index.html
+++ b/index.html
@@ -2,16 +2,4 @@
 layout: default
 ---
 
-<p style="font-size:100%;">Welcome to the Cystic Fibrosis Map project (CF-MAP), an effort focused on high-quality description of cystic fibrosis mechanisms and building a predictive computational model based on this description.</p>
-
-<h1>Upcoming events</h1>
-  
-<p>The <a href="http://disease-maps.org/events">4th Disease Maps Community Meeting</a> (DMCM2019) is scheduled 2-4 October 2019, Sevilla, Spain.</p>
-
-<h1>Pathway highlight: normal CFTR function</h1>
-
-<a href="/map/"><img src="/images/maps/CFTR_WT_v06_Blue_Cut.png" width="260"/></a>
-
-<h1>Publication highlight</h1>
-
-<p>João D. Santos. Folding Status Is Determinant over Traffic-Competence in Defining CFTR Interactors in the Endoplasmic Reticulum. Cells. 2019 Apr 14;8(4).353. <a href="https://doi.org/10.3390/cells8040353"> doi: 10.3390/cells8040353.</a>. Epub 2019 April 14. PubMed PMID:31014000 </p>
+<p style="font-size:100%;">Welcome to the Process Diagram Models (PD-Models) resource...</p>
