--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-<p style="font-size:100%;">Welcome to the Process Diagram Models (PD-Models) resource...</p>
+<p style="font-size:100%;">Test 2 Welcome to the Process Diagram Models (PD-Models) resource...</p>
